# SportsFacilitiesAndTransportationInTrentino

./: LICENSE  README.md
Documentation/: KGE_presentation.pptx  connectivity_matrix.csv  connectivity_matrix_legend.csv
Evaluation/: cq1.sparql  cq2.sparql  cq3.sparql  cq4.sparql  cq5.sparql
Metadata/: Dataset_Metadata.csv  Knowledge_metadata.csv  Language_metadata.csv  People_metadata.csv  Project_metadata.csv
Phase 1 - Purpose Formalization/: ER.graphml
Phase 3 - Language Definition/: Language spreadsheet.csv  Language spreadsheet.tsv  concept_mapping.csv
Phase 4 - Knowledge Definition/: convert.py  ontology.rdf  ontology_processed.rdf  teleology.rdf  teleology_processed.rdf  teleontology.rdf  teleontology_processed.rdf
Phase 5 - Data Definition/: bus_routes_cleaned.geojson-model_processed.ttl  bus_trip-model_processed.ttl  convert.py  end_user.tsv-model_processed.ttl  end_user_processed.ttl  final_KG.ttl  fitness_centre-model_processed.ttl  fitness_centre_data.tsv-model_processed.ttl  fitness_centre_processed.ttl  fitness_station-model_processed.ttl  fitness_station_data.tsv-model_processed.ttl  fitness_station_processed.ttl  pitch-model_processed.ttl  pitch_data.tsv-model_processed.ttl  pitch_processed.ttl  region.tsv-model_processed.ttl  region_processed.ttl  (+12 more)
code/formal_resource_gathering/: pyproject.toml  query.py  train_routes.query
code/formal_resource_gathering/processing/: 1_normalize_coordinates_facilities.py  2_merge_facilities.py  3_enrich_and_split_facilities.py
code/formal_resource_gathering/resource_gathering/: bus_routes.query
(+78 files in other folders)
