[tool.poetry]
name = "formal-resource-gathering"
version = "0.1.0"
description = ""
authors = ["patrick-nanys <patrick.nanys2000@gmail.com>"]
readme = "README.md"
packages = [{include = "formal_resource_gathering"}]

[tool.poetry.dependencies]
python = "^3.11.4"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
