[tool.poetry]
name = "formal-resource-gathering"
version = "0.1.0"
description = ""
authors = ["patrick-nanys <patrick.nanys2000@gmail.com>"]
readme = "README.md"
packages = [{include = "formal_resource_gathering"}]

[tool.poetry.dependencies]
python = "^3.11.4"
requests = "^2.31.0"
numpy = "^1.26.2"
pandas = "^2.1.3"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
notebook = "^7.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
